style.css
h1 {
    font-weight: 600px;
}

.headshot {
    border: double;
    border-color: rgb(127, 216, 249);
}

.facts {
    border: solid;
    border-color: rgb(127, 216, 249);
}

body {
    background-image: url("https://wallpaper-mania.com/wp-content/uploads/2018/09/High_resolution_wallpaper_background_ID_77701199044.jpg");
    font-family: 'Cinzel', serif;
        font-weight: 600px;
    margin: auto;
    width: 50%;
}

main, header, footer {
    background-color: white;
}

.center {
    text-align: center;
}

